<resources>
    <string name="app_name">ADMINAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">ORDERS</string>
    <string name="menu_slideshow">PENDING REQUESTS</string>
    <string name="msg">Messages</string>
    <string name="categories">Edit Categories</string>
    <string name="logout">Logout</string>
    <string name="home_second">Home Second</string>
    <string name="tab1">category1</string>
    <string name="tab2">category2</string>
    <string name="tab3">category3</string>
    <string name="tab4">category4</string>
    <string name="category1">Food</string>
    <string name="category2">Vegetables</string>
    <string name="category3">Grocery</string>
    <string name="category4">Home Appliances</string>
    <string name="category5">Cakes</string>
    <string name="category6">Fashion</string>
    <string name="category7">Meat</string>
    <string name="category8">Electronics</string>
    <string name="category9">Mobile and Accessories</string>
    <string name="cod_not_eligible">COD NOT ELIGIBLE</string>
    <string name="cod_eligible">COD ELIGIBLE</string>
    <string name="refund_eligible">REPLACEMENT ELIGIBLE</string>
    <string name="refund_not_eligible">REPLACEMENT NOT ELIGIBLE</string>
    <string name="coupons">Coupons</string>


</resources>