<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_add_alarm_black_24dp"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_msg"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/msg" />
        <item
        android:id="@+id/nav_cat"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/categories" />
        <item
            android:id="@+id/nav_coupons"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/coupons" />

    </group>
    <item android:title="About Developer">
        <menu>
            <item android:id="@+id/aboutdeveloper"
                android:title="abc@123"/>
        </menu>
    </item>
</menu>