<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Addpost">



  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <TextView
            android:id="@+id/addnewitemtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ADD NEW ITEMS"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="20dp"
            />
        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/userNameCard"-->
        <!--            android:layout_margin="16dp"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:cardCornerRadius="15dp"-->
        <!--            app:cardElevation="15dp"-->
        <!--            app:cardBackgroundColor="@color/white"-->
        <!--            android:layout_marginRight="16dp">-->
        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:orientation="horizontal">-->
        <!--                <ImageView-->
        <!--                    xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--                    android:layout_margin="15dp"-->
        <!--                    android:id="@+id/usrImg"-->
        <!--                    android:layout_width="50dp"-->
        <!--                    android:layout_height="50dp"-->
        <!--                    android:src="@drawable/ic_image_black_24dp"-->
        <!--                    />-->
        <!--                <LinearLayout-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:orientation="vertical">-->

        <!--                    <TextView-->
        <!--                        android:id="@+id/userNmeTxt"-->
        <!--                        android:layout_width="277dp"-->
        <!--                        android:layout_height="wrap_content"-->
        <!--                        android:layout_gravity="center"-->
        <!--                        android:layout_marginLeft="20dp"-->
        <!--                        android:fontFamily="@font/roboto_light"-->
        <!--                        android:text="Category"-->
        <!--                        android:textColor="@color/colorPrimary" />-->
        <!--                    <EditText-->
        <!--                        android:layout_width="match_parent"-->
        <!--                        android:layout_height="wrap_content"-->
        <!--                        android:textColor="@color/black"-->
        <!--                        android:textColorHint="@color/Gray"-->
        <!--                        android:fontFamily="@font/roboto_light"-->
        <!--                        android:hint="ADD YOUR CATEGORY"/>-->
        <!--                </LinearLayout>-->
        <!--            </LinearLayout>-->

        <!--        </androidx.cardview.widget.CardView>-->


        <Spinner
            android:id="@+id/categoryspinner"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize ="16sp"
            android:layout_height="50dp"/>
        <Spinner
            android:id="@+id/subcategoryspinner"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize ="16sp"
            android:textAlignment="center"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_marginBottom="60dp"
            android:layout_below="@+id/addnewitemtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


          <androidx.cardview.widget.CardView
              android:layout_margin="16dp"
              android:id="@+id/TextCard"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:cardBackgroundColor="@color/white"
              app:cardElevation="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
              <TextView
                  android:padding="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Item Name"
                  android:fontFamily="@font/roboto_light"
                  android:textColor="@color/colorPrimary"
                  android:textSize="16dp"></TextView>
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white"></View>

              <EditText
                  android:padding="10dp"
                  android:id="@+id/itemname_post"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#FFF"
                  android:textColor="@color/black"
                  android:textColorHint="@color/Gray"
                  android:hint="ADD NEW ITEM NAME"
                  android:fontFamily="@font/roboto_light"
                  android:layout_marginTop="10dp"
                  />
            </LinearLayout>
          </androidx.cardview.widget.CardView>



          <androidx.cardview.widget.CardView
              android:layout_margin="16dp"
              android:id="@+id/headerTextCard2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:cardBackgroundColor="@color/white"
              app:cardElevation="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
              <TextView
                  android:padding="10dp"
                  android:fontFamily="@font/roboto_light"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Amount"
                  android:textColor="@color/colorPrimary"
                  android:textSize="16dp"></TextView>
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white"></View>

              <EditText
                  android:padding="15dp"
                  android:id="@+id/amount_post"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#FFF"
                  android:layout_marginTop="10dp"
                  android:textColor="@color/black"
                  android:inputType="number"
                  android:textColorHint="@color/Gray"
                  android:hint="ADD AMOUNT"
                  android:fontFamily="@font/roboto_light"
                  android:singleLine="true"
                  android:maxLength="60"/>
            </LinearLayout>
          </androidx.cardview.widget.CardView>
          <androidx.cardview.widget.CardView
              android:layout_margin="16dp"

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:cardBackgroundColor="@color/white"
              app:cardElevation="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
              <TextView
                  android:padding="10dp"
                  android:fontFamily="@font/roboto_light"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Quantity"
                  android:textColor="@color/colorPrimary"
                  android:textSize="16dp"></TextView>
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/Gray"></View>

              <EditText
                  android:padding="15dp"
                  android:id="@+id/quantity_post"
                  android:fontFamily="@font/roboto_light"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#FFF"
                  android:layout_marginTop="10dp"
                  android:singleLine="true"
                  android:inputType="number"
                  android:textColor="@color/black"
                  android:textColorHint="@color/Gray"
                  android:hint="ADD QUANTITY"
                  android:maxLength="60"/>
            </LinearLayout>
          </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="16dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:padding="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Quantity Desc"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"></TextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"></View>

                    <EditText
                        android:padding="15dp"
                        android:id="@+id/quantity_post_detail"
                        android:fontFamily="@font/roboto_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFF"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/Gray"
                        android:hint="QUANTITY DESCRIPTION(KG,L,ML) "
                        android:maxLength="60"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
          <androidx.cardview.widget.CardView
              android:layout_margin="16dp"
              android:id="@+id/descriptionCard"
              android:layout_below="@+id/headerTextCard"
              android:layout_marginTop="15dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cardElevation="15dp"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:cardBackgroundColor="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
              <TextView
                  android:padding="10dp"
                  android:fontFamily="@font/roboto_light"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Description"
                  android:textColor="@color/colorPrimary"
                  android:textSize="16dp"/>
              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/Gray"></View>
              <EditText
                  android:padding="15dp"
                  android:id="@+id/description_post"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#FFF"
                  android:lines="6"
                  android:fontFamily="@font/roboto_light"
                  android:textColor="@color/black"
                  android:textColorHint="@color/Gray"
                  android:hint="ADD DESCRIPTION"
                  android:gravity="left"
                  android:layout_marginTop="20dp"
                  android:maxLength="600"/>

              <RadioGroup
                  android:id="@+id/cod"
                  android:layout_margin="20dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/cod_eligible"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/cod_eligible"/>
                <RadioButton
                    android:id="@+id/cod_not_eligible"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/cod_not_eligible"/>
              </RadioGroup>

              <RadioGroup
                  android:id="@+id/refund"
                  android:layout_width="match_parent"
                  android:layout_margin="20dp"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/refund_eligible"
                    android:layout_width="0dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/refund_eligible"/>
                <RadioButton
                    android:id="@+id/refund_not_eligible"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/refund_not_eligible"/>
              </RadioGroup>
            </LinearLayout>
          </androidx.cardview.widget.CardView>

          <TextView

              android:id="@+id/txtAttachment"
              android:layout_marginRight="10dp"
              android:drawablePadding="10dp"
              android:drawableLeft="@drawable/ic_attach_file_black_24dp"
              android:padding="10dp"
              android:clickable="true"
              android:layout_gravity="end"
              android:layout_marginTop="15dp"
              android:fontFamily="@font/roboto_light"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Add Image"
              android:background="@color/colorPrimary"
              android:textColor="@color/white"
              />






        </LinearLayout>
        <ImageView
            android:id="@+id/imageitem"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="POST"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnoffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="CLICK TO ADD OFFER"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
      </LinearLayout>
    </RelativeLayout>

  </ScrollView>

</RelativeLayout>